footer button update

--- a/css/about.css
+++ b/css/about.css
@@ -292,6 +292,9 @@ option {
 
 
 /* footer */
+input::placeholder{
+    color: #FFFFFF;
+}
 
 .footer-container-wrapper {
     background-color: #1A1A1A;
