--- a/css/categoriya.css
+++ b/css/categoriya.css
@@ -37,7 +37,7 @@
   margin: 0 auto;
 }
 
-.top-contact__wrapper {
+.top__contact-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,7 +48,7 @@
   border-bottom: 2px solid #3333331A;
 }
 
-.top-contact__number {
+.top__contact-number {
   font-weight: 400;
   font-size: 16px;
   line-height: 100%;
@@ -57,7 +57,7 @@
   padding: 20px 0;
 }
 
-.top-contact__contact {
+.top__contact-contact {
   width: 270px;
   height: 20px;
   display: -webkit-box;
@@ -69,7 +69,7 @@
   padding: 26px 0;
 }
 
-.top-contact__tel {
+.top__contact-tel {
   font-weight: 400;
   font-size: 16px;
   line-height: 100%;
@@ -79,7 +79,7 @@
   padding-left: 10px;
 }
 
-.top-contact__tel-contact {
+.top__contact-tel-contact {
   font-weight: 400;
   font-size: 16px;
   line-height: 100%;
@@ -87,29 +87,29 @@
   color: #333333B2;
 }
 
-.top-contact__border {
+.top__border {
   height: 50px;
   border: 1px solid #3333331A;
 }
 
-.top-contact__translition {
+.top__contact-translition {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 18px 0 27px 0;
 }
 
-.top-contact__translition-tt {
+.top__translition {
   border: none;
   outline: none;
 }
 
-.top-contact__option-text {
+.top__option {
   background-color: #4762FF;
-  color: white;
+  color: #FFFFFF;
 }
 
-.header-content {
+.header__content-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -118,7 +118,7 @@
   justify-content: space-between;
 }
 
-.header-content__wrapper {
+.header__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -129,7 +129,7 @@
   padding: 18px 0 18px 0;
 }
 
-.header-content__menu {
+.header__content-menu {
   height: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -139,7 +139,7 @@
   margin-left: 123px;
 }
 
-.header-content__text {
+.header__content-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
@@ -148,7 +148,7 @@
   color: #333333;
 }
 
-.header-content__text:hover {
+.header__content-text:hover {
   color: #4762FF;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -156,7 +156,7 @@
   transform: scale(1.1);
 }
 
-.header-content__item {
+.header__content-item {
   width: 117px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -168,7 +168,7 @@
   padding-left: 63px;
 }
 
-.header-content__input {
+.header__input {
   font-weight: 400;
   font-size: 16px;
   line-height: 158%;
@@ -181,7 +181,23 @@
   color: black;
 }
 
-.header-content__button-text {
+.header__input::-webkit-input-placeholder {
+  color: #333333;
+}
+
+.header__input:-ms-input-placeholder {
+  color: #333333;
+}
+
+.header__input::-ms-input-placeholder {
+  color: #333333;
+}
+
+.header__input::placeholder {
+  color: #333333;
+}
+
+.header__button-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -197,7 +213,7 @@
   border-radius: 5px;
 }
 
-.header-content__button-text:hover {
+.header__button-text:hover {
   background-color: #333333;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -205,11 +221,11 @@
   transform: scale(1.1);
 }
 
-.header-content__button-text-a {
+.header__button-item {
   padding-left: 15px;
 }
 
-.header-content__button-text-p {
+.header__button {
   font-weight: 500;
   font-size: 16px;
   line-height: 158%;
@@ -219,40 +235,32 @@
   color: #FFFFFF;
 }
 
-.hero-content {
-  margin: 0 auto;
-  height: 566px;
-  background-image: url(../images/bacroundimg.png);
+.hero__contact {
+  width: 522px;
+  height: 330px;
+  padding: 101px 0px 135px;
 }
 
-.hero__content-wrapper {
-  width: 582px;
-  height: 334px;
-  padding: 110px 0 122px;
-}
-
-.hero__item {
+.hero__contact-text {
   font-weight: 700;
   font-size: 40px;
   line-height: 100%;
   letter-spacing: 0%;
   text-transform: uppercase;
   color: #FFFFFF;
+  padding-bottom: 16px;
 }
 
-.hero__text {
+.hero__contact-item {
   font-weight: 400;
   font-size: 24px;
   line-height: 100%;
   letter-spacing: 0%;
-  color: #FFFFFFCC;
-  opacity: 80%;
-  padding-top: 16px;
-  width: 490px;
-  height: 87px;
+  color: #FFFFFF;
+  padding-bottom: 32px;
 }
 
-.hero__submit {
+.hero__contact-button {
   font-weight: 600;
   font-size: 18px;
   line-height: 100%;
@@ -261,13 +269,12 @@
   color: #FFFFFF;
   padding: 15px 30px;
   border-radius: 8px;
-  border: none;
   background-color: #4762FF;
-  margin-top: 32px;
+  border: none;
   cursor: pointer;
 }
 
-.hero__submit:hover {
+.hero__contact-button:hover {
   background-color: #333333;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -275,109 +282,124 @@
   transform: scale(1.1);
 }
 
-.about__content-wrapper {
+.hero-contact-wrapper {
+  height: 566px;
+  background-image: url(../images/catgory.png);
+}
+
+.cantact-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 554px;
-  padding: 68px 0 76px;
-  gap: 39px;
 }
 
-.about__h2 {
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 100%;
+.catalog__contact-cantact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.catalog__filter-panel {
+  width: 302px;
+  height: 427px;
+  padding-top: 40px;
+  padding-right: 40px;
+}
+
+.catalog__filter-category {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 150%;
   letter-spacing: 0%;
-  color: #333333;
-  margin-bottom: 16px;
+  vertical-align: middle;
+  text-transform: uppercase;
+  color: #000000DE;
+  padding-bottom: 5px;
 }
 
-.about__p {
+.catalog__filter-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.catalog__filter-sub {
+  border-top: 1px solid #E3E3E3;
+  border-bottom: 1px solid #E3E3E3;
+}
+
+.catalog__filter-group-2 {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  vertical-align: middle;
+  color: #000000DE;
+  padding: 18px 0;
+  border-bottom: 1px solid #E3E3E3;
+}
+
+.catalog__filter-group {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 100%;
+  font-size: 16px;
+  line-height: 150%;
   letter-spacing: 0%;
-  color: #333333CC;
-  opacity: 80%;
+  vertical-align: middle;
+  color: #000000AD;
 }
 
-.about__button {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #FFFFFF;
-  border: none;
-  border-radius: 8px;
-  background-color: #4762FF;
-  padding: 15px 48px;
-  cursor: pointer;
-  margin: 80px 2px 0 344px;
-}
-
-.about__button:hover {
-  background-color: #333333;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-.catalog__contact-h2 {
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #333333;
-}
-
-.catalog__contact-wrapper {
+.catalog__contact-wrapper-item {
+  width: 782px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  gap: 26px;
-  padding: 64px 0 58px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding: 52px 0 48px;
 }
 
-.catalog__item {
-  width: 250px;
-  height: 332px;
+.catalog__text {
   -webkit-box-shadow: 0 0 6px 0 #0000001A;
   box-shadow: 0 0 6px 0 #0000001A;
   border-radius: 6px;
 }
 
-.catalog__item-img {
-  padding: 7px 6.5px;
+.catalog__text>img {
+  padding: 7px 7px 0 7px;
 }
 
-.catalog__item-h3 {
+.catalog__contact {
   font-weight: 500;
   font-size: 20px;
   line-height: 150%;
   letter-spacing: 0%;
   vertical-align: middle;
   color: #000000CC;
-  padding-left: 19px;
+  padding: 0 127px 7px 19px;
 }
 
-.catalog__item-p {
+.catalog__contact-vrap {
   font-weight: 700;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0%;
   color: #33333399;
-  padding-left: 19px;
 }
 
-.catalog__span {
-  font-weight: 500;
+.catalog__contact-etam {
+  padding: 0 18px 14px 19px;
+}
+
+.catalog__contact-vrap>span {
+  font-weight: 550;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0%;
@@ -385,198 +407,17 @@
   opacity: 60%;
 }
 
-.catalog__button {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 100%;
-  letter-spacing: 0%;
+.catalog-contact-h2 {
   text-align: center;
-  color: #FFFFFF;
-  background-color: #4762FF;
-  border-radius: 8px;
-  border: none;
-  padding: 9px 61px 10px;
-  margin: 18px 19px;
-  cursor: pointer;
-}
-
-.catalog__button:hover {
-  background-color: #333333;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-/* patient */
-.patient__contact-wrapper {
-  text-align: center;
-}
-
-.patient__contact {
-  width: 873px;
-  height: 200px;
-  text-align: center;
-  margin: 0 auto;
-}
-
-.patient__item {
+  padding: 44px 0 52px;
   font-weight: 700;
   font-size: 48px;
   line-height: 100%;
   letter-spacing: 0%;
-  text-align: center;
-  text-transform: lowercase;
-  color: #333333;
-  margin-bottom: 10px;
-}
-
-.patient__text {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #333333CC;
-  padding: 0 28px;
-  width: 860px;
-  margin: 0 auto;
-}
-
-.patient__contact-img {
-  width: 1119px;
-  height: 489px;
-  cursor: pointer;
-}
-
-/* partnior-contact-wrapper */
-.partnior__contact-wrapper {
-  text-align: center;
-  padding: 67px 0 0;
-}
-
-.partnior__item {
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  text-align: center;
   color: #333333;
 }
 
-.partnior__contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  gap: 50px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 31px 0 51px;
-}
-
-/* form-box */
-.from__box-contact {
-  padding: 118px 0 90px 500px;
-}
-
-.from__box {
-  width: 607px;
-  background-color: #4762FF;
-  border-radius: 6px;
-}
-
-.from__item {
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #FFFFFF;
-  padding: 20px 35px 0 36px;
-}
-
-.from__text {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #FFFFFFCC;
-  height: 42px;
-  padding: 16px 40px 25px 36px;
-}
-
-.from__input {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  color: #FFFFFF;
-  padding: 19px 23px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 532px;
-  height: 56px;
-  border-radius: 8px;
-  border: none;
-  outline: none;
-  margin: 25px 37px 23px 38px;
-  background-color: #FFFFFF1A;
-}
-
-.from__input::-webkit-input-placeholder {
-  color: #FFFFFF;
-}
-
-.from__input:-ms-input-placeholder {
-  color: #FFFFFF;
-}
-
-.from__input::-ms-input-placeholder {
-  color: #FFFFFF;
-}
-
-.from__input::placeholder {
-  color: #FFFFFF;
-}
-
-.from__submit-btn {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #4762FF;
-  width: 532px;
-  height: 66px;
-  margin: 12px 37px 40px 38px;
-  border-radius: 8px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-}
-
-.from__submit-btn:hover {
-  background-color: #333333;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-transform: scale(1.06);
-  transform: scale(1.06);
-  border: 2px solid white;
-  color: white;
-}
-
-.from-box-wrapper {
-  height: 687px;
-  background-image: url(../images/bacround-img22.png);
-}
-
-.footer__contact {
+.footer__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -669,10 +510,6 @@
   margin: 8px 0;
 }
 
-.footer__contacts {
-  width: 285px;
-}
-
 .footer__text-item {
   font-weight: 400;
   font-size: 16px;
@@ -719,22 +556,6 @@
   cursor: pointer;
 }
 
-.footer__input-field::-webkit-input-placeholder {
-  color: #FFFFFF;
-}
-
-.footer__input-field:-ms-input-placeholder {
-  color: #FFFFFF;
-}
-
-.footer__input-field::-ms-input-placeholder {
-  color: #FFFFFF;
-}
-
-.footer__input-field::placeholder {
-  color: #FFFFFF;
-}
-
 .footer__input-field:hover {
   background-color: #4762FF;
   -webkit-transition: all 0.3s;
@@ -768,7 +589,7 @@
   transform: scale(1.05);
 }
 
-.footer__button {
+.footer__bottom {
   font-weight: 400;
   font-size: 12px;
   line-height: 24px;
@@ -778,7 +599,7 @@
   cursor: pointer;
 }
 
-.footer__button:hover {
+.footer__bottom:hover {
   color: #4762FF;
 }
 
@@ -786,9 +607,25 @@
   border-bottom: 1px solid #474747;
 }
 
-.footer-contact-wrapper {
+input::-webkit-input-placeholder {
+  color: #FFFFFF;
+}
+
+input:-ms-input-placeholder {
+  color: #FFFFFF;
+}
+
+input::-ms-input-placeholder {
+  color: #FFFFFF;
+}
+
+input::placeholder {
+  color: #FFFFFF;
+}
+
+.footer-container-wrapper {
   background-color: #1A1A1A;
   height: 354px;
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=categoriya.css.map */
